- Unify all timestamps to msec 
- Sync GuessDir from master
- add output parameter struct
- Introduce file layout V2. Adappt for new record format.
- Cleanup lots of old stuff

2020-02-23
- Create unicorn repo for working towards nfdump-1.7.x